--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,8 @@
     "@devexpress/dx-react-core": "^2.1.2",
     "@devexpress/dx-react-grid": "^2.1.2",
     "@devexpress/dx-react-grid-material-ui": "^2.1.2",
+    "@material-ui/core": "^4.5.2",
+    "@material-ui/icons": "^4.5.1",
     "axios": "^0.18.1",
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
